# arti-ops

./: .env.example  .gitignore  CHANGELOG.md  CNAME  PRD.md  README.md  SSD.md  TEST.md  deploy_policy.py  generate_llms.sh  graphify  index.html  install.sh  main.py  pyproject.toml  setup-swarm-adapter.sh
.agents/: docker-compose.swarm.yml
.agents/board/1-backlog/: 000-verify-legacy-setup.md  001-feature-workflow-sync-arti_tool.md  001-review-pipeline-architecture-arti_core.md  002-feature-workflow-sync-cli-arti_cli.md
.agents/board/6-done/: 000-verify-legacy-setup.md  002-add-workflows-to-list-viewer-arti_cli.md  003-fix-bookstack-workflows-sync-arti_core.md  004-hybrid-remote-local-list-viewer-arti_core.md  005-hierarchical-l1-l2-l3-remote-preview-list-viewer-arti_core.md  006-refactor-badges-to-G1-G2-L1-L2-arti_core.md  007-tui-cache-optimization.md  008-tui-diff-lazy-loading.md  009-tui-detailed-loading-message.md  010-tui-focus-border-color.md  011-tui-grey-out-uneditable.md  012-tui-keymap-upsert-split.md  013-tui-keymap-c-globalizer.md  014-implement-policy-document-model.md  015-implement-policy-composer-engine.md  016-refactor-executor-to-use-policy-composer.md  (+6 more)
.agents/rules/: antigravity-core.md  develop-guide.md  graphify.md  update-architecture.md  update-guide.md
.agents/scripts/: ralph-loop.sh  sync-worktrees.sh
docs/: DESIGN.md  MEMORY.md  PRD.md  SSD.md  bookstack_guide.md  deploy_guide.md  docker_guide.md  gws_guide.md  llms.txt  tui_manual.md
src/arti_ops/: config.py
tests/: test_architect.py  test_architect_live.py  test_bookstack.py  test_bookstack_live.py  test_dialog.py  test_executor.py  test_executor_live.py  test_gws_chat.py  test_gws_chat_live.py  test_pipeline.py  test_pipeline_live.py  test_profiler.py  test_profiler_live.py  test_sandbox.py  test_sandbox_live.py  test_verifier.py  test_verifier_live.py
(+32 files in other folders)
