[project]
name = "arti-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.27.0",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "textual>=8.1.1",
]

[project.scripts]
arti-ops = "arti_ops.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
