[project]
name = "arti-ops"
version = "0.5.0"
description = "로컬 컨텍스트 기반 AgentOps CLI 플랫폼"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]>=1.27.0",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "cyclopts>=2.9.0",
    "prompt_toolkit>=3.0.43"
]

[project.scripts]
arti-ops = "arti_ops.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
